--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -16,22 +16,30 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: 100vh;
   justify-content: center;
-  margin: 3rem 0;
 }
 
 .todo-list-container {
   background-color: #f8f8f8;
   border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 255, 0.671) 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+  box-shadow: rgba(0, 0, 255, 0.671) 0px 0px 0px 2px inset,
+    rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px,
+    rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px,
+    rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px,
+    rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
   padding: 2rem;
   text-align: center;
   width: 500px;
 
   h1 {
+    color: #404040;
+    font-weight: 600;
+    letter-spacing: 0.2cm;
+    padding: 1rem 0;
     text-transform: uppercase;
   }
 
@@ -39,25 +47,32 @@ main {
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
     justify-content: center;
     list-style: none;
+    min-height: 6.25rem;
 
     .task-item {
       border-bottom: 1px solid #8e949d;
-      border-radius: 0.2rem;
+      color: #404040;
       display: flex;
       justify-content: space-between;
       padding: 1rem;
       width: 100%;
 
       .task-list.pending {
-        color: #FFB931;
+        color: #ffb931;
       }
 
       .task-list.done {
-        color: #2ED653;
+        color: #2ed653;
       }
+    }
+
+    h2 {
+      color: #404040;
+      font-weight: 200;
+      padding: 5rem 0;
     }
   }
 
